# telotimeless-production

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/config/: settings.py  urls.py
backend/hospitals/: admin.py  apps.py  models.py  serializers.py  translation.py  urls.py  views.py
backend/hospitals/migrations/: 0001_initial.py  0002_hospital_slug_hospital_title_hospitalnews.py  0003_hospital_category_hospital_description_en_and_more.py  0004_alter_hospital_description_and_more.py  0005_alter_hospital_description_and_more.py
frontend/: _middleware.js  i18n.js  next-intl.config.js  next.config.js  package-lock.json  package.json
frontend/messages/: en.json  ko.json
frontend/src/app/: ErrorPage.js  layout.js  page.js
frontend/src/app/[locale]/: layout.js  page.js
frontend/src/app/about/: page.js
frontend/src/app/about-detail/: page.js
frontend/src/app/appointment/: page.js
frontend/src/app/contact/: page.js
frontend/src/app/hospitals/: page.js
frontend/src/components/: LocaleProvider.js
frontend/src/components/Accordion/: index.js
frontend/src/components/AppointmentForm/: AppointmentFormStyle2.js  index.js
frontend/src/components/Breadcrumb/: BreadcrumbStyle2.js  index.js
frontend/src/components/Button/: index.js
frontend/src/components/ContactForm/: index.js
frontend/src/components/Cta/: index.js
frontend/src/components/Feature/: index.js
frontend/src/components/Footer/: index.js
frontend/src/components/FunFact/: index.js
frontend/src/lib/: apiClient.js  getMessages.js
(+79 files in other folders)
